--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,4 @@
-<div class="row">
-  <h3 class="center">ระบบออกเลขเอกสาร สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย<sup>version 2.0</sup></h3>
-</div>
-<div class="row center">
-  <a class="waves-effect waves-light btn" (click)="login()"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in with Docchula</a>
-</div>
+<h1 class="is-size-1">
+  ระบบออกเลขเอกสาร สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย
+</h1>
+<button class="button is-primary is-large" (click)="login()">เข้าสู่ระบบ</button>
