--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="row">
-  <h3 class="center">ระบบออกเลขเอกสาร สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย<sup>version 2.0</sup></h3>
+  <h3 class="center">ระบบออกเอกสาร <sup>v3.0</sup></h3>
+  <h4 class="center">สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</h4>
 </div>
 <div class="row center">
-  <a class="waves-effect waves-light btn" (click)="login()"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign in with Docchula</a>
+  <a class="waves-effect waves-light btn-large orange" (click)="login()"><i class="material-icons"></i> Sign in with Docchula</a>
 </div>
