--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <h3 class="center">ระบบออกเอกสาร <sup>v3.0</sup></h3>
+  <h3 class="center">ระบบออกหนังสือ <sup>v3.0</sup></h3>
   <h4 class="center">สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</h4>
 </div>
 <div class="row center">
