--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,14 @@
       <a [routerLink]="['/']" class="brand-logo">หนังสือ สพจ.</a>
       <a class="sidenav-trigger" data-target="sidenav" href="#"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
-        <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
+        <li *ngIf="user === 1"><a (click)="login()">เข้าสู่ระบบ</a></li>
+        <li *ngIf="user !== 1"><a (click)="logout()">ออกจากระบบ</a></li>
       </ul>
     </div>
   </nav>
   <ul class="sidenav" id="sidenav">
-    <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
-    <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
+    <li *ngIf="user === 1"><a (click)="login()">เข้าสู่ระบบ</a></li>
+    <li *ngIf="user !== 1"><a (click)="logout()">ออกจากระบบ</a></li>
   </ul>
 </div>
 <div class="container">
