--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,5 +3,5 @@
   <h4 class="center">สโมสรนิสิตคณะแพทยศาสตร์ จุฬาลงกรณ์มหาวิทยาลัย</h4>
 </div>
 <div class="row center">
-  <a class="waves-effect waves-light btn-large orange" (click)="login()"><i class="material-icons"></i> Sign in with Docchula</a>
+  <a class="waves-effect waves-light btn-large orange" (click)="login()"><i class="material-icons"></i> เข้าสู่ระบบด้วย Docchula</a>
 </div>
