--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -12,7 +12,7 @@
 
         <ul class="collapsible">
           <li>
-            <div class="collapsible-header"><i class="material-icons">playlist_play</i>ฉันร่างหนังสือไว้แล้ว ต้องการเพียงเลขที่หนังสือ</div>
+            <div class="collapsible-header"><i class="material-icons">add</i>ฉันร่างหนังสือไว้แล้ว ต้องการเพียงเลขที่หนังสือ</div>
             <div class="collapsible-body">
               <span>ท่านจะต้องร่างหนังสือไว้เสร็จเรียบร้อยแล้ว เหลือเพียงเลขหนังสือเท่านั้น จึงจะดำเนินการต่อ</span>
               <form [formGroup]="numberForm" (ngSubmit)="submitNumber()">
@@ -56,6 +56,7 @@
           <li>
             <div class="collapsible-header"><i class="material-icons">create</i>ฉันต้องการร่างหนังสือใหม่ โดยใช้แบบมาตรฐาน (beta)</div>
             <div class="collapsible-body">
+              <span>ในขณะนี้ ระบบสามารถสร้างหนังสือที่ใช้รูปแบบมาตรฐาน (3 ย่อหน้า) เท่านั้น และยังไม่สามารถออกเลขหนังสือสพจ. พร้อมกันได้</span>
               <form [formGroup]="docForm" (ngSubmit)="submitDoc()">
                 <div class="row">
                   <div class="col s12">
@@ -74,16 +75,16 @@
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input id="gTo" type="text" class="validate" formControlName="to" required>
+                    <input id="gTo" type="text" class="validate autocomplete" formControlName="to" required>
                     <label for="gTo">ถึง</label>
-                    <span class="helper-text">ผู้รับ โดยปกติคือตำแหน่งของหัวหน้าหน่วยงานที่ต้องการแจ้ง</span>
+                    <span class="helper-text">โดยปกติคือตำแหน่งของหัวหน้าหน่วยงานที่ต้องการแจ้ง</span>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col s12">
                     <p>
                       <label>
-                        <input type="checkbox" checked="checked" value="in" formControlName="insideTo"/>
+                        <input type="checkbox" formControlName="insideTo"/>
                         <span>ผู้รับเป็นอาจารย์ในจุฬาลงกรณ์มหาวิทยาลัย (ลงท้าย "ด้วยความเคารพอย่างสูง")</span>
                       </label>
                     </p>
@@ -110,27 +111,83 @@
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input id="gParagraph3" type="text" class="validate autocomplete" formControlName="paragraph_3" />
+                    <input id="gParagraph3" type="text" class="validate autocomplete" formControlName="paragraph_3"/>
                     <label for="gParagraph3">ย่อหน้า 3: สรุปความประสงค์ (จึงเรียนมาเพื่อ...)</label>
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col s12">
-                    <label>ผู้ลงนาม 1</label>
-                    <select formControlName="divisionId" required>
-                      <option *ngFor="let person of signers$[0] | async" [value]="person.name" [attr.data-icon]="person.picture_url">{{person.title}}</option>
+                  <div class="col s12 input-field">
+                    <select formControlName="signer_1" required>
+                      <option value="skip">(ข้าม)</option>
+                      <option *ngFor="let person of signers[1]" [value]="person.name+'/'+person.title" [attr.data-icon]="person.picture_url">{{person.title}}</option>
                     </select>
+                    <label>ผู้ลงนาม 1</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 input-field">
+                    <select formControlName="signer_2" required>
+                      <option value="skip">(ข้าม)</option>
+                      <option *ngFor="let person of signers[2]" [value]="person.name+'/'+person.title" [attr.data-icon]="person.picture_url">{{person.title}}</option>
+                    </select>
+                    <label>ผู้ลงนาม 2</label>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12 input-field">
+                    <select formControlName="signer_3" required>
+                      <option *ngFor="let person of signers[3]" [value]="person.name+'/'+person.title" [attr.data-icon]="person.picture_url">{{person.title}}</option>
+                      <option value="skip">(ข้าม)</option>
+                    </select>
+                    <label>ผู้ลงนาม 3</label>
+                  </div>
+                </div>
+                <div>
+                  <h6>นิสิตผู้ประสานงาน</h6>
+                  <div class="row">
+                    <div class="col s6 input-field">
+                      <input id="gContactName" type="text" class="validate" formControlName="contact_name" required>
+                      <label for="gContactName">ชื่อ</label>
+                      <span class="helper-text">ผู้ที่ต้องการให้ติดต่อกลับ (นาย/นางสาว)</span>
+                    </div>
+                    <div class="col s6 input-field">
+                      <input id="gContactPhone" type="text" class="validate" formControlName="contact_phone" required>
+                      <label for="gContactPhone">หมายเลขโทรศัพท์</label>
+                      <span class="helper-text">ในรูปแบบ 08-1234-5678</span>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
                   <div class="col s12">
-                    <button class="btn waves-effect waves-light blue" type="submit" [disabled]="docForm.disabled">
+                    <p>
+                      <label>
+                        <input type="checkbox" formControlName="hasAssocSign"/>
+                        <span>ให้รองคณบดีฝ่ายกิจการนิสิตลงนามรับรอง</span>
+                      </label>
+                    </p>
+                    <p>
+                      <label>
+                        <input type="checkbox" formControlName="wantIssue"/>
+                        <span>ออกเลขเอกสารสพจ.</span>
+                      </label>
+                    </p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col s12">
+                    <button class="btn waves-effect waves-light blue" type="submit" [disabled]="docForm.disabled || docForm.invalid">
                       สร้างไฟล์หนังสือ
                       <i class="material-icons right">save</i>
                     </button>
                   </div>
                 </div>
               </form>
+            </div>
+          </li>
+          <li>
+            <div class="collapsible-header"><i class="material-icons">playlist_play</i>ฉันต้องการออกเลขที่หนังสือในเรื่องเดียวกันจำนวนมาก</div>
+            <div class="collapsible-body">
+              <span>โปรดติดต่อฝ่ายเทคโนโลยีสารสนเทศ สโมสรนิสิตฯ</span>
             </div>
           </li>
         </ul>
