feat: doc generator is now working! (except number issuing)

--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="row">
                   <div class="input-field col s12">
-                    <input id="gAttachment" type="text" class="validate" formControlName="attachment">
+                    <textarea id="gAttachment" class="materialize-textarea" formControlName="attachment"></textarea>
                     <label for="gAttachment">สิ่งที่ส่งมาด้วย</label>
                     <span class="helper-text">หากไม่มีให้เว้นว่าง</span>
                   </div>
@@ -165,12 +165,12 @@
                         <span>ให้รองคณบดีฝ่ายกิจการนิสิตลงนามรับรอง</span>
                       </label>
                     </p>
-                    <p>
+                    <!--p>
                       <label>
                         <input type="checkbox" formControlName="wantIssue"/>
                         <span>ออกเลขเอกสารสพจ.</span>
                       </label>
-                    </p>
+                    </p-->
                   </div>
                 </div>
                 <div class="row">
