--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -14,7 +14,7 @@
           <li>
             <div class="collapsible-header"><i class="material-icons">add</i>ฉันร่างหนังสือไว้แล้ว ต้องการเพียงเลขที่หนังสือ</div>
             <div class="collapsible-body">
-              <span>ท่านจะต้องร่างหนังสือไว้เสร็จเรียบร้อยแล้ว เหลือเพียงเลขหนังสือเท่านั้น จึงจะดำเนินการต่อ</span>
+              <!--span>ท่านจะต้องร่างหนังสือไว้เสร็จเรียบร้อยแล้ว เหลือเพียงเลขหนังสือเท่านั้น จึงจะดำเนินการต่อ</span-->
               <form [formGroup]="numberForm" (ngSubmit)="submitNumber()">
                 <div class="row">
                   <div class="input-field col s12">
@@ -31,7 +31,7 @@
                     </select>
                   </div>
                 </div>
-                <div class="row">
+                <!--div class="row">
                   <div class="col s12 file-field input-field">
                     <div class="btn">
                       <span>File</span>
@@ -41,7 +41,7 @@
                       <input class="file-path validate" type="text" placeholder="อัพโหลดไฟล์เอกสาร (.docx/.pdf)">
                     </div>
                   </div>
-                </div>
+                </div-->
                 <div class="row">
                   <div class="col s12">
                     <button class="btn waves-effect waves-light" type="submit" [disabled]="numberForm.disabled">
