fix: use correct imports for AngularFire and (new) Materialize

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,19 @@
-<nav *ngIf="((user$ | async) || 1) as user">
-  <div class="nav-wrapper container">
-    <a [routerLink]="['/']"class="brand-logo">เอกสาร สพจ.</a>
-    <a class="button-collapse" materialize="sideNav" data-activates="sidenav"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
-      <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
-    </ul>
-    <ul class="side-nav" id="sidenav">
-      <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
-      <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
-    </ul>
-  </div>
-</nav>
+<div *ngIf="((user$ | async) || 1) as user">
+  <nav class="green">
+    <div class="nav-wrapper container">
+      <a [routerLink]="['/']" class="brand-logo">เอกสาร สพจ.</a>
+      <a class="sidenav-trigger" data-target="sidenav" href="#"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
+        <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
+      </ul>
+    </div>
+  </nav>
+  <ul class="sidenav" id="sidenav">
+    <li *ngIf="user === 1"><a (click)="login()">Sign In</a></li>
+    <li *ngIf="user !== 1"><a (click)="logout()">Sign Out</a></li>
+  </ul>
+</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
