feat: add document status update notification
Rewrite Firebase Cloud Functions in TypeScript

--- a/src/app/main/list/list.component.html
+++ b/src/app/main/list/list.component.html
@@ -97,7 +97,7 @@
             <span>คืนต้นเรื่องแล้ว</span>
           </label>
         </p>
-        <p>[สำหรับฝ่ายกิจการนิสิต] เมื่อแก้ไขสถานะแล้ว ระบบจะแสดงผลบนเว็บไซต์</p>
+        <p>[สำหรับฝ่ายกิจการนิสิต] เมื่อแก้ไขสถานะแล้ว ระบบจะแสดงผลบนเว็บไซต์ และส่งอีเมลแจ้งเตือนเจ้าของหนังสือ</p>
         <div class="divider"></div>
       </div>
       <div *ngIf="focusedDoc && (user.canEditStatus || user.uid === focusedDoc.user.profile.uid)">
