feat: generate docNumber on client-side

--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -7,7 +7,7 @@
     <ng-template #noName>
       <h4>ออกหนังสือใหม่ ปีพ.ศ. {{year.buddhist_year}}</h4>
     </ng-template>
-    <div class="row" *ngIf="divisions$ | async as divisions">
+    <div class="row" *ngIf="divisions">
       <div class="col s12 m10 offset-m1">
 
         <ul class="collapsible">
