fix: use number form input

--- a/src/app/main/new/new.component.html
+++ b/src/app/main/new/new.component.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row" *ngIf="numberForm.value.multipleDoc">
                   <div class="input-field col s12">
-                    <input id="number" type="text" class="validate" formControlName="numberOfDoc">
+                    <input id="number" type="number" class="validate" formControlName="numberOfDoc">
                     <label for="number">จำนวนหนังสือ</label>
                     <span class="helper-text">โปรดขอเลขหนังสือให้พอดี หนังสือที่ออกเลขพร้อมกันต้องส่งพร้อมกันในวันที่เดียวกัน</span>
                   </div>
